splash screen added done

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,23 +10,30 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Sidemenu">
         <activity
-            android:name=".About"
-            android:launchMode="singleTask"
+            android:name=".MainActivity"
             android:exported="true" />
+        <activity
+            android:name=".About"
+            android:exported="true"
+            android:launchMode="singleTask" />
         <activity
             android:name=".Dashboard"
-            android:launchMode="singleTask"
-            android:exported="true" />
+            android:exported="true"
+            android:launchMode="singleTask" />
         <activity
-            android:name=".MainActivity"
-            android:launchMode="singleTask"
-            android:exported="true">
+            android:name=".splashscreen"
+            android:exported="true"
+            android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
