--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+    implementation 'com.github.florent37:expansionpanel:1.2.4'
+    implementation 'com.robertlevonyan.view:MaterialExpansionPanel:2.1.1'
+
+
 }
