--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,5 +40,9 @@ dependencies {
     implementation 'com.github.florent37:expansionpanel:1.2.4'
     implementation 'com.robertlevonyan.view:MaterialExpansionPanel:2.1.1'
 
+    implementation 'com.squareup.picasso:picasso:2.8'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
 
 }
