--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.sidemenu">
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
@@ -8,7 +9,14 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Sidemenu">
+        android:theme="@style/Theme.Sidemenu"
+        android:usesCleartextTraffic="true">
+        <activity
+            android:name=".CardDesignActivity"
+            android:exported="true" />
+        <activity
+            android:name=".expansionLayout"
+            android:exported="true" />
         <activity
             android:name=".cardViewCardDesign"
             android:exported="true" />
