--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.sidemenu">
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -11,6 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Sidemenu"
         android:usesCleartextTraffic="true">
+        <activity
+            android:name=".EditPage.EditpageActivity"
+            android:exported="false" />
         <activity
             android:name=".CardDesignActivity"
             android:exported="true" />
